# apkg

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  COPYING  README.md  doc-requirements.txt  mkdocs.yml  pylintrc  pytest.ini  requirements.txt  setup.cfg  setup.py  tox.ini
apkg/: __init__.py  __main__.py  _version.py  adistro.py  cache.py  cli.py  compat.py  ex.py  exception.py  log.py  parse.py  pkgstyle.py  pkgtemplate.py  project.py  terminal.py
apkg/commands/: ar.py  build.py  build_dep.py  builddep.py  get_archive.py  install.py  make_archive.py  make_source_package.py  srcpkg.py  status.py  system_setup.py
apkg/lib/: ar.py  build.py  build_dep.py  common.py  deps.py  get_archive.py  install.py  make_archive.py  srcpkg.py  status.py  system_setup.py
apkg/pkgstyles/: arch.py  deb.py  nix.py  rpm.py
apkg/util/: archive.py  cmd.py  common.py  git.py  run.py  shutil35.py  test.py  upstreamversion.py
ci/: README.md
ci/images/: README.md  build.sh  update.sh  upload.sh
ci/images/centos-7/: Dockerfile
ci/images/debian-10/: Dockerfile
ci/images/debian-10-full/: Dockerfile
ci/images/debian-9/: Dockerfile
ci/images/fedora-33/: Dockerfile
ci/images/fedora-34/: Dockerfile
ci/images/python-current/: Dockerfile
ci/images/rocky-8/: Dockerfile
ci/images/suse-15/: Dockerfile
ci/images/ubuntu-18.04/: Dockerfile
ci/images/ubuntu-20.04/: Dockerfile
ci/python-3.5/: Dockerfile
ci/python-current/: Dockerfile
ci/tests/: test_apkg.py  test_bird.py  test_knot_dns.py  test_knot_resolver.py  test_libyang.py
ci/tests/data/knot-resolver/distro/config/: apkg.toml
distro/config/: apkg.toml
distro/pkg/arch/: PKGBUILD
distro/pkg/deb/: changelog  control  copyright  rules
distro/pkg/nix/: default.nix  top-level.nix
distro/pkg/rpm/: apkg.spec
docs/: README.md  __init__.py  commands.md  config.md  design.md  errors.md  guide.md  index.md  install.md  intro.md  news.md  pkgstyles.md  templates.md
pkg/srcpkgs/nixos-21.05/apkg-0.1.1.dev6+g12ae2a2-1/: default.nix  htmllistparse.nix  top-level.nix
scripts/: make-archive.sh  make-dev-archive.sh  upstream-version.py
tests/integration/: test_knot_resolver.py
tests/integration/data/knot-resolver/distro/config/: apkg.toml
tests/self/: self_common.py  test_self.py
tests/unit/: test_unit_foo.py  unit_common.py
