[metadata]
name = apkg
summary = minimalist cross-distro packaging automation tool
description-file = README.md
classifiers =
    Programming Language :: Python :: 3
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: POSIX :: Linux
author = Jakub Ruzicka
author-email = jakub.ruzicka@nic.cz
home-page = https://gitlab.nic.cz/packaging/apkg
keywords = packaging, tool

[global]
setup-hooks = pbr.hooks.setup_hook

[files]
packages =
    apkg

[entry_points]
console_scripts =
    apkg = apkg.cli:main

[aliases]
test=pytest

[pycodestyle]
exclude=build,lib,.tox,third,*.egg,docs,packages,.eggs
# E123, E125, W503 skipped as they are invalid PEP-8.
ignore = E123,E125,W503
show-source = True
