[metadata]
name = apkg
author = Jakub Ružicka
author-email = jakub.ruzicka@nic.cz
description = cross-distro upstream packaging automation tool
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.nic.cz/packaging/apkg
project_urls =
    Bug Tracker = https://gitlab.nic.cz/packaging/apkg/-/issues
    Docs = https://apkg.readthedocs.io/
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: System :: Archiving :: Packaging
    Topic :: Utilities

[options]
packages = find:
install_requires =
    beautifulsoup4
    blessings
    cached_property
    click
    distro
    jinja2
    packaging
    requests
    toml

[options.packages.find]
exclude =
    docs

[options.entry_points]
console_scripts =
    apkg = apkg.cli:main

[pycodestyle]
exclude=build,lib,.tox,third,*.egg,docs,packages,.eggs
# E123, E125, W503 skipped as they are invalid PEP-8.
ignore = E123,E125,W503
show-source = True
